GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.23alpha9 :   
    
        - Fixed internal SNMP accounter for printers which only have a life time
          page counter, and not a volatile page counter.
          
    - 1.23alpha8 :
    
        - The data dumper can now summarize payments and history with the
          help of the --sum command line option (or checkbox in the CGI).
          
        - The message used when the job's filename, title and options are 
          hidden because of the privacy directive is now translated at
          retrieval time, instead of at saving time.
          
        - Minor fix in the LDAP backend code.  
          
    - 1.23alpha7 :
    
        - Improvements to the internal PJL and SNMP accounter : now should
          support more printers and waste less time.
          
    - 1.23alpha6 :
    
        - The data dumper's start= and end= date filtering options now
          accept a positive or negative offset to be added to the special
          keywords 'yesterday', 'today', 'now', 'tomorrow'. 
          e.g. : dumpykota --data history start=yesterday-5 end=today
          
    - 1.23alpha5 :
    
        - The data dumper's start= and end= date filtering options now accept 
          the special keywords 'yesterday', 'today', 'now' and 'tomorrow'.
          
    - 1.23alpha4 :
    
        - The data dumper now accept start= and end= to specify the starting
          and ending dates to dump the history.
          
    - 1.23alpha3 :
    
        - The destination link for the logo used in CGI scripts is 
          configurable.
          
        - Data dumper improved : it's faster and now datas are correctly 